refactor: change quotation marks to rule 1.3 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Basic Style */
+
 body {
     background-color: #f8f8f8;
     color: #333;
@@ -53,7 +54,7 @@ li, h3 {
     list-style: none;
 }
 
-input,button{
+input, button {
     outline: none;
 }
 
@@ -74,7 +75,7 @@ button:hover {
 /* Heading */
 
 h3,
-label[for='new-task'] {
+label[for="new-task"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -103,7 +104,7 @@ input[type="text"]:focus {
 
 /* New Task */
 
-label[for='new-task'] {
+label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
@@ -139,7 +140,7 @@ li > label {
     width: 226px;
 }
 
-li >    input[type="text"] {
+li > input[type="text"] {
     width: 226px
 }
 
