--- a/style.css
+++ b/style.css
@@ -6,59 +6,59 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+.header__img {
     width: 100%;
 }
 
-.aaa .more_inf {
+.header__info {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-.aaa { 
+.header { 
     text-align: center;
 }
 
 }
 
-.centered-main-page-element {
+.container {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
 
-.task {
+.task, .task-title {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
 
-.task-row-wrapper {
+.add-item__wrapper {
     display: flex;
 }
 
-ul {
+.list {
     margin: 0;
     padding: 0px;
 }
 
-li, h3 {
+.item, .title {
     list-style: none;
 }
 
-input, button {
+.task, .checkbox, .button, .task-title {
     outline: none;
 }
 
-button {
+.button {
     background: none;
     border: 0px;
     color: #888;
@@ -68,14 +68,13 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button:hover {
     color: #3a3a3a;
 }
 
 /* Heading */
 
-h3,
-label[for="new-task"] {
+.title, .add-item__title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -85,7 +84,7 @@ label[for="new-task"] {
     text-transform: uppercase;
 }
 
-input[type="text"] {
+.task, .task-title {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -98,24 +97,24 @@ input[type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus {
+.task:focus, .task-title:focus {
     color: #333;
 }
 
 /* New Task */
 
-label[for="new-task"] {
+.add-item__title {
     display: block;
     margin: 0 0 20px;
 }
 
-input#new-task {
+.task--add {
     width: 318px;
 }
 
 /* Task list */
 
-li {
+.item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -125,53 +124,53 @@ li {
     align-items: center;
 }
 
-li > * {
+.item {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.item .task-title {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li > input[type="text"] {
+.item .task {
     width: 226px
 }
 
-button.delete img {
+.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
 
-ul#completed-tasks label {
+.task-title--done {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
 
-ul li input[type=text] {
+.item .task {
     display: none
 }
 
-ul li.editMode input[type=text] {
+.item--edit .task {
     display: inline-block;
     width: 224px
 }
 
-ul li.editMode label {
+.item--edit .task-title {
     display: none;
 }
