--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 .task, .task-title {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .add-item__wrapper {
@@ -140,7 +140,7 @@ body {
 }
 
 .item .task {
-    width: 226px
+    width: 226px;
 }
 
 .delete img {
@@ -156,19 +156,19 @@ body {
 /* Completed */
 
 .task-title--done {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 
 .item .task {
-    display: none
+    display: none;
 }
 
 .item--edit .task {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .item--edit .task-title {
