--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* Basic Style */
 
-body {
+.body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -35,7 +35,8 @@ body {
     margin: 0 auto 0;
 }
 
-.task, .task-title {
+.task,
+.task-title {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
@@ -50,11 +51,15 @@ body {
     padding: 0px;
 }
 
-.item, .title {
+.item,
+.title {
     list-style: none;
 }
 
-.task, .checkbox, .button, .task-title {
+.task,
+.checkbox,
+.button,
+.task-title {
     outline: none;
 }
 
@@ -74,7 +79,8 @@ body {
 
 /* Heading */
 
-.title, .add-item__title {
+.title,
+.add-item__title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
